Fixed overlapping default star color.

--- a/client/styles/colors/ratings.styl
+++ b/client/styles/colors/ratings.styl
@@ -8,6 +8,8 @@
 		.ratingbox__left-col .ratingbox-rating.rating-user
 			fill $color-primary
 		.rating-stars
+			.svg-icon
+				fill #484745
 			.selecting
 				&.star-on .svg-icon
 					fill $color-primary
